# QuantPath

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  SECURITY.md
.github/ISSUE_TEMPLATE/: data_contribution.yml
.github/workflows/: ci.yml
cli/: main.py
core/: __init__.py  admission_data.py  calibrator.py  course_optimizer.py  data_loader.py  gap_advisor.py  interview_prep.py  list_builder.py  lr_predictor.py  models.py  prerequisite_matcher.py  profile_evaluator.py  profile_validator.py  report_generator.py  roi_calculator.py  school_ranker.py  test_requirements.py  timeline_generator.py
data/: LICENSE  interview_questions.yaml
data/admissions/: README.md  collected.csv  data_quality_report.md  feature_matrix.csv  linkedin_profiles.json  (+6 more)
docs/: PRODUCT_VISION.md
examples/: sample_profile.yaml
scripts/: collect_expand.py  collect_gradcafe_inertia.py  collect_linkedin_brave.py  collect_multidim.py  prepare_training_data.py
tests/: __init__.py  test_admission_data.py  test_calibrator.py  test_course_optimizer.py  test_integration_pipeline.py  test_list_builder.py  test_lr_predictor.py  test_prerequisite_matcher.py  test_profile_evaluator.py  test_profile_validator.py  test_roi_calculator.py  test_school_ranker.py  test_test_requirements.py  test_timeline_generator.py
tools/: __init__.py  advisor.py  batch_repredict_issues.py  clean_data.py  collect_data.py  parse_admissions.py  parse_profile.py  scrape_1p3a.py  scrape_gradcafe.py  scrape_offer_backgrounds.py  train_model.py  train_model_v2.py
web/: app.py
(+5 files in other folders)
